--- a/docs/docs-ref-autogen/custom-functions-runtime.yml
+++ b/docs/docs-ref-autogen/custom-functions-runtime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 415be2eeb6964a678cf19324da4bafb88be9c168
-ms.sourcegitcommit: 262b7c417245b7b61a57d53eee33a477a722ca6e
+ms.openlocfilehash: 9ce7f4faa65afa557d7e4b5534759cf039836883
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "24968828"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770439"
 items:
 - uid: custom-functions-runtime
   name: custom-functions-runtime
@@ -13,8 +13,32 @@ items:
   - typeScript
   type: package
   children:
+  - custom-functions-runtime.CustomFunctions.associate
   - custom-functions-runtime.CustomFunctions.CancelableHandler
   - custom-functions-runtime.CustomFunctions.StreamingHandler
+- uid: custom-functions-runtime.CustomFunctions.associate
+  summary: <span data-ttu-id="ec133-101">将联系在一起使用 JSON id 属性的函数的 JavaScript 名称</span><span class="sxs-lookup"><span data-stu-id="ec133-101">Ties together the function's JavaScript name with the JSON id property</span></span>
+  isPreview: true
+  name: associate(id, functionObject)
+  fullName: CustomFunctions.associate
+  langs:
+  - typeScript
+  type: function
+  syntax:
+    content: 'export function associate(id: string, functionObject: Function): void;'
+    return:
+      type:
+      - void
+      description: ''
+    parameters:
+    - id: id
+      description: ''
+      type:
+      - string
+    - id: functionObject
+      description: ''
+      type:
+      - Function
 references:
 - uid: custom-functions-runtime.CustomFunctions.CancelableHandler
   name: CustomFunctions.CancelableHandler
