--- a/docs/docs-ref-autogen/excel/excel.chartfill.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartfill.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 48f4df18a14864dcd906c8b490056f53f39c12bc
-ms.sourcegitcommit: 3771b97cffd6e0510fd4e9c6288db696cd0c0ca9
+ms.openlocfilehash: d4acd0100c894ee41d6cb4ca453810cdd6cd53af
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "26996261"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770467"
 items:
 - uid: excel.Excel.ChartFill
   summary: >-
-    <span data-ttu-id="62b47-101">表示图表元素的填充格式。</span><span class="sxs-lookup"><span data-stu-id="62b47-101">Represents the fill formatting for a chart element.</span></span>
+    <span data-ttu-id="2f378-101">表示图表元素的填充格式。</span><span class="sxs-lookup"><span data-stu-id="2f378-101">Represents the fill formatting for a chart element.</span></span>
 
 
-    <span data-ttu-id="62b47-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62b47-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2f378-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f378-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.ChartFill
   fullName: Excel.ChartFill
   langs:
@@ -27,10 +27,10 @@ items:
   - excel.Excel.ChartFill.toJSON
 - uid: excel.Excel.ChartFill.clear
   summary: >-
-    <span data-ttu-id="62b47-103">清除图表元素的填充颜色。</span><span class="sxs-lookup"><span data-stu-id="62b47-103">Clear the fill color of a chart element.</span></span>
+    <span data-ttu-id="2f378-103">清除图表元素的填充颜色。</span><span class="sxs-lookup"><span data-stu-id="2f378-103">Clear the fill color of a chart element.</span></span>
 
 
-    <span data-ttu-id="62b47-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62b47-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2f378-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f378-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: clear()
   fullName: clear
   langs:
@@ -41,9 +41,9 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"62b47-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"62b47-105\">Examples</span></span>\n\n```javascript\n// Clear the line format of the major Gridlines on value axis of the Chart named \"Chart1\"\nExcel.run(function (ctx) { \n    var gridlines = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\").axes.valueAxis.majorGridlines;\n    gridlines.format.line.clear();\n    return ctx.sync().then(function() {\n            console.log(\"Chart Major Gridlines Format Cleared\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"2f378-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"2f378-105\">Examples</span></span>\n\n```javascript\n// Clear the line format of the major Gridlines on value axis of the Chart named \"Chart1\"\nExcel.run(function (ctx) { \n    var gridlines = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\").axes.valueAxis.majorGridlines;\n    gridlines.format.line.clear();\n    return ctx.sync().then(function() {\n            console.log(\"Chart Major Gridlines Format Cleared\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.ChartFill.load
-  summary: <span data-ttu-id="62b47-106">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="62b47-106">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="62b47-107">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="62b47-107">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="2f378-106">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="2f378-106">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2f378-107">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="2f378-107">You must call "context.sync()" before reading the properties.</span></span>
   name: load(option)
   fullName: load
   langs:
@@ -62,10 +62,10 @@ items:
       - string | string[] | OfficeExtension.LoadOption
 - uid: excel.Excel.ChartFill.setSolidColor
   summary: >-
-    <span data-ttu-id="62b47-108">将图表元素的填充格式设置为统一颜色。</span><span class="sxs-lookup"><span data-stu-id="62b47-108">Sets the fill formatting of a chart element to a uniform color.</span></span>
+    <span data-ttu-id="2f378-108">将图表元素的填充格式设置为统一颜色。</span><span class="sxs-lookup"><span data-stu-id="2f378-108">Sets the fill formatting of a chart element to a uniform color.</span></span>
 
 
-    <span data-ttu-id="62b47-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62b47-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="2f378-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2f378-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: setSolidColor(color)
   fullName: setSolidColor
   langs:
@@ -76,10 +76,10 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"62b47-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"62b47-110\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var chart = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\");    \n\n    chart.format.fill.setSolidColor(\"#FF0000\");\n\n    return ctx.sync().then(function() {\n            console.log(\"Chart1 Background Color Changed.\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let pointsCollection = sheet.charts.getItemAt(0).series.getItemAt(0).points;\n    let point = pointsCollection.getItemAt(2);\n\n    // Set color for chart point.\n    point.format.fill.setSolidColor('red');\n\n    await context.sync();        \n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"2f378-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"2f378-110\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var chart = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\");    \n\n    chart.format.fill.setSolidColor(\"#FF0000\");\n\n    return ctx.sync().then(function() {\n            console.log(\"Chart1 Background Color Changed.\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let pointsCollection = sheet.charts.getItemAt(0).series.getItemAt(0).points;\n    let point = pointsCollection.getItemAt(2);\n\n    // Set color for chart point.\n    point.format.fill.setSolidColor('red');\n\n    await context.sync();        \n});\n```"
     parameters:
     - id: color
-      description: <span data-ttu-id="62b47-111">HTML 表示边框线，窗体的颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名的 HTML 颜色 （例如"橙色"）。</span><span class="sxs-lookup"><span data-stu-id="62b47-111">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      description: <span data-ttu-id="2f378-111">HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名的 HTML 颜色 （例如"橙色"）。</span><span class="sxs-lookup"><span data-stu-id="2f378-111">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
       type:
       - string
 - uid: excel.Excel.ChartFill.toJSON
