--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangefilldata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangefilldata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 66905984c136b68af8a16d6ba0b634dde1ed728a
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 4147805d6b90c4a5eb86b330da2905439bc4fda3
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26228162"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770453"
 items:
 - uid: excel.Excel.Interfaces.RangeFillData
-  summary: <span data-ttu-id="336c6-101">描述调用"rangeFill.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="336c6-101">An interface describing the data returned by calling "rangeFill.toJSON()".</span></span>
+  summary: <span data-ttu-id="6a001-101">描述调用"rangeFill.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="6a001-101">An interface describing the data returned by calling "rangeFill.toJSON()".</span></span>
   name: Excel.Interfaces.RangeFillData
   fullName: Excel.Interfaces.RangeFillData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.RangeFillData.color
 - uid: excel.Excel.Interfaces.RangeFillData.color
   summary: >-
-    <span data-ttu-id="336c6-102">HTML 表示边框线，窗体的颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色</span><span class="sxs-lookup"><span data-stu-id="336c6-102">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+    <span data-ttu-id="6a001-102">HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色</span><span class="sxs-lookup"><span data-stu-id="6a001-102">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
 
 
-    <span data-ttu-id="336c6-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="336c6-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6a001-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6a001-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: color
   fullName: color
   langs:
