--- a/docs/docs-ref-autogen/excel/excel.rangefill.yml
+++ b/docs/docs-ref-autogen/excel/excel.rangefill.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 56355a015426b22519c42d51da16a5562d0f7403
-ms.sourcegitcommit: 3771b97cffd6e0510fd4e9c6288db696cd0c0ca9
+ms.openlocfilehash: af24c3642140ba568c913c48ef7b3565bb2977d9
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "26994658"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770460"
 items:
 - uid: excel.Excel.RangeFill
   summary: >-
-    <span data-ttu-id="b7e7f-101">表示 Range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="b7e7f-101">Represents the background of a range object.</span></span>
+    <span data-ttu-id="40c49-101">表示 Range 对象的背景。</span><span class="sxs-lookup"><span data-stu-id="40c49-101">Represents the background of a range object.</span></span>
 
 
-    <span data-ttu-id="b7e7f-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7e7f-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40c49-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40c49-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.RangeFill
   fullName: Excel.RangeFill
   langs:
@@ -27,10 +27,10 @@ items:
   - excel.Excel.RangeFill.toJSON
 - uid: excel.Excel.RangeFill.clear
   summary: >-
-    <span data-ttu-id="b7e7f-103">重置范围背景。</span><span class="sxs-lookup"><span data-stu-id="b7e7f-103">Resets the range background.</span></span>
+    <span data-ttu-id="40c49-103">重置范围背景。</span><span class="sxs-lookup"><span data-stu-id="40c49-103">Resets the range background.</span></span>
 
 
-    <span data-ttu-id="b7e7f-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7e7f-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40c49-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40c49-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: clear()
   fullName: clear
   langs:
@@ -41,13 +41,13 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"b7e7f-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-105\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    var rangeFill = range.format.fill;\n    rangeFill.clear();\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"40c49-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-105\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    var rangeFill = range.format.fill;\n    rangeFill.clear();\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
 - uid: excel.Excel.RangeFill.color
   summary: >-
-    <span data-ttu-id="b7e7f-106">HTML 表示边框线，窗体的颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色</span><span class="sxs-lookup"><span data-stu-id="b7e7f-106">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+    <span data-ttu-id="40c49-106">HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色</span><span class="sxs-lookup"><span data-stu-id="40c49-106">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
 
 
-    <span data-ttu-id="b7e7f-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7e7f-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40c49-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40c49-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: color
   fullName: color
   langs:
@@ -59,8 +59,8 @@ items:
       type:
       - string
 - uid: excel.Excel.RangeFill.load
-  summary: <span data-ttu-id="b7e7f-108">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="b7e7f-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="b7e7f-109">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="b7e7f-109">You must call "context.sync()" before reading the properties.</span></span>
-  remarks: "<span data-ttu-id=\"b7e7f-110\">除了此签名，此方法具有以下签名：</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-110\">In addition to this signature, this method has the following signatures:</span></span>\n\n<span data-ttu-id=\"b7e7f-111\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFill`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-111\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFill` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>\n\n<span data-ttu-id=\"b7e7f-112\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFill`-仅可对集合的类型。</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-112\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFill` - Only available on collection types.</span></span> <span data-ttu-id=\"b7e7f-113\">它是类似于前一个签名。</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-113\">It is similar to the preceding signature.</span></span> <span data-ttu-id=\"b7e7f-114\">Option.top 指定集合项可在结果中包含的最大数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-114\">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id=\"b7e7f-115\">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-115\">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id=\"b7e7f-116\">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-116\">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>\n#### <a name=\"examples\"></a><span data-ttu-id=\"b7e7f-117\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"b7e7f-117\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    var rangeFill = range.format.fill;\n    rangeFill.load('color');\n    return ctx.sync().then(function() {\n        console.log(rangeFill.color);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\n// The example below sets fill color. \nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var range = ctx.workbook.worksheets.getItem(sheetName).getRange(rangeAddress);\n    range.format.fill.color = '0000FF';\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
+  summary: <span data-ttu-id="40c49-108">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="40c49-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="40c49-109">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="40c49-109">You must call "context.sync()" before reading the properties.</span></span>
+  remarks: "<span data-ttu-id=\"40c49-110\">除了此签名，此方法具有以下签名：</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-110\">In addition to this signature, this method has the following signatures:</span></span>\n\n<span data-ttu-id=\"40c49-111\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFill`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-111\">`load(option?: { select?: string; expand?: string; }): Excel.RangeFill` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>\n\n<span data-ttu-id=\"40c49-112\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFill`-仅可对集合的类型。</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-112\">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RangeFill` - Only available on collection types.</span></span> <span data-ttu-id=\"40c49-113\">它是类似于前一个签名。</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-113\">It is similar to the preceding signature.</span></span> <span data-ttu-id=\"40c49-114\">Option.top 指定集合项可在结果中包含的最大数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-114\">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id=\"40c49-115\">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-115\">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id=\"40c49-116\">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-116\">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>\n#### <a name=\"examples\"></a><span data-ttu-id=\"40c49-117\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"40c49-117\">Examples</span></span>\n\n```javascript\nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var worksheet = ctx.workbook.worksheets.getItem(sheetName);\n    var range = worksheet.getRange(rangeAddress);\n    var rangeFill = range.format.fill;\n    rangeFill.load('color');\n    return ctx.sync().then(function() {\n        console.log(rangeFill.color);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\n// The example below sets fill color. \nExcel.run(function (ctx) { \n    var sheetName = \"Sheet1\";\n    var rangeAddress = \"F:G\";\n    var range = ctx.workbook.worksheets.getItem(sheetName).getRange(rangeAddress);\n    range.format.fill.color = '0000FF';\n    return ctx.sync(); \n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
   name: load(option)
   fullName: load
   langs:
@@ -74,7 +74,7 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="b7e7f-118">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="b7e7f-118">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="40c49-118">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="40c49-118">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.RangeFill.toJSON
